--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         });
       });
     </script>
-    <a href="/"><div class="reload"><p>Click here for more cards</p></div></a>
+    <a href="https://lauraschultz.github.io/tindercardsjs/"><div class="reload"><p>Click here for more cards</p></div></a>
     <!-- <div class="buttons"><div class="button d"><img src="gfx/dislike.png" /></div><div class="button l"><img src="gfx/like.png" /></div></div> -->
   </body>
   
