--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
           new Tindercardsjs.card(7, '', '', 'gfx/pics/07.jpg'),
           new Tindercardsjs.card(8, '', '', 'gfx/pics/08.jpg'),
           new Tindercardsjs.card(9, '', '', 'gfx/pics/09.jpg'),
+          new Tindercardsjs.card(10, '', '', 'gfx/pics/FullSizeRender.jpg'),
+          new Tindercardsjs.card(11, '', '', 'gfx/pics/IMG_0257.jpg'),
         ];
         
         // Render cards
