--- a/index.html
+++ b/index.html
@@ -104,6 +104,18 @@
           new Tindercardsjs.card(9, '', '', 'gfx/pics/09.jpg'),
           new Tindercardsjs.card(10, '', '', 'gfx/pics/FullSizeRender.jpg'),
           new Tindercardsjs.card(11, '', '', 'gfx/pics/IMG_0257.jpg'),
+          new Tindercardsjs.card(12, '', '', 'gfx/pics/IMG_4252.jpg'),
+         new Tindercardsjs.card(13, '', '', 'gfx/pics/IMG_9110.jpg'),
+          new Tindercardsjs.card(14, '', '', 'gfx/pics/IMG_7608.jpg'),
+          new Tindercardsjs.card(15, '', '', 'gfx/pics/IMG_9186.jpg'),
+          new Tindercardsjs.card(16, '', '', 'gfx/pics/IMG_7691.jpg'),
+          new Tindercardsjs.card(17, '', '', 'gfx/pics/IMG_2295.jpg'),
+          new Tindercardsjs.card(18, '', '', 'gfx/pics/IMG_3261.jpg'),
+          new Tindercardsjs.card(19, '', '', 'gfx/pics/IMG_4254.jpg'),
+           new Tindercardsjs.card(20, '', '', 'gfx/pics/IMG_3236.jpg'),
+          new Tindercardsjs.card(21, '', '', 'gfx/pics/IMG_3259.jpg'),
+          new Tindercardsjs.card(22, '', '', 'gfx/pics/IMG_3260.jpg'),
+          new Tindercardsjs.card(23, '', '', 'gfx/pics/page3.jpg'),
         ];
         
         // Render cards
