--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           new Tindercardsjs.card(8, '', '', 'gfx/pics/08.jpg'),
           new Tindercardsjs.card(9, '', '', 'gfx/pics/09.jpg'),
           new Tindercardsjs.card(10, '', '', 'gfx/pics/FullSizeRender.jpg'),
-          new Tindercardsjs.card(11, '', '', 'gfx/pics/page3.jpg'),
+          new Tindercardsjs.card(11, '', '', 'gfx/pics/page3.JPG'),
       
         ];
         
