--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           new Tindercardsjs.card(23, '', '', 'gfx/pics/page3.JPG'),
           new Tindercardsjs.card(24, '', '', 'gfx/pics/IMG_7608.JPG'),
           new Tindercardsjs.card(25, '', '', 'gfx/pics/IMG_7691.JPG'),
-           new Tindercardsjs.card(1, '', '', 'gfx/pics/lil1.jpg'),
+           new Tindercardsjs.card(1, '', '', 'gfx/pics/lil1.JPG'),
           new Tindercardsjs.card(26, '', '', 'gfx/pics/IMG_9110.JPG'),
            new Tindercardsjs.card(1, '', '', 'gfx/pics/01.jpg'),
           new Tindercardsjs.card(27, '', '', 'gfx/pics/IMG_9186.JPG'),
