--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           new Tindercardsjs.card(19, '', '', 'gfx/pics/IMG_4252.JPG'),
            new Tindercardsjs.card(20, '', '', 'gfx/pics/IMG_4254.JPG'),
           new Tindercardsjs.card(21, '', '', 'gfx/pics/IMG_4860.JPG'),
-          new Tindercardsjs.card(22, '', '', 'gfx/pics/IMG_4923.JPG'),
+          new Tindercardsjs.card(22, '', '', 'gfx/pics/IMG_4923.png'),
           new Tindercardsjs.card(23, '', '', 'gfx/pics/page3.JPG'),
           new Tindercardsjs.card(25, '', '', 'gfx/pics/IMG_7691.JPG'),
            new Tindercardsjs.card(26, '', '', 'gfx/pics/lil1.JPG'),
