--- a/index.html
+++ b/index.html
@@ -94,28 +94,66 @@
         // Define cards
         var cards = [
          
-          new Tindercardsjs.card(1, '', '', 'gfx/pics/IMG_7608.JPG'),
+             new Tindercardsjs.card(2, '', '', 'gfx/pics/32.jpg'),
+             new Tindercardsjs.card(2, '', '', 'gfx/pics/lil9.JPG'),
+             new Tindercardsjs.card(2, '', '', 'gfx/pics/31.jpg'),
+             new Tindercardsjs.card(2, '', '', 'gfx/pics/lil13.JPG'),
+          new Tindercardsjs.card(2, '', '', 'gfx/pics/15.jpg'),
+             new Tindercardsjs.card(2, '', '', 'gfx/pics/23.jpg'),
+           new Tindercardsjs.card(2, '', '', 'gfx/pics/24.jpg'),
+        new Tindercardsjs.card(2, '', '', 'gfx/pics/lil8.JPG'),
+          new Tindercardsjs.card(2, '', '', 'gfx/pics/lil10.JPG'),
+          new Tindercardsjs.card(2, '', '', 'gfx/pics/28.jpg'),
+          new Tindercardsjs.card(2, '', '', 'gfx/pics/27.jpg'),
+          new Tindercardsjs.card(2, '', '', 'gfx/pics/lil14.jpg'),
           new Tindercardsjs.card(2, '', '', 'gfx/pics/02.jpg'),
           new Tindercardsjs.card(3, '', '', 'gfx/pics/03.jpg'),
-          new Tindercardsjs.card(4, '', '', 'gfx/pics/04.jpg'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/l2.JPG'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/lil11.JPG'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/22.jpg'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/21.jpg'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/met.JPG'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/lil4.JPG'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/19.jpg'),
+          new Tindercardsjs.card(4, '', '', 'gfx/pics/04.jpg')
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/30.jpg'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/13.jpg'),
+         new Tindercardsjs.card(1, '', '', 'gfx/pics/26.jpg'),
+          new Tindercardsjs.card(1, '', '', 'gfx/pics/IMG_7608.JPG'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/20.jpg'),
           new Tindercardsjs.card(5, '', '', 'gfx/pics/05.jpg'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/14.jpg'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/25.jpg'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/l1.jpg'),
           new Tindercardsjs.card(6, '', '', 'gfx/pics/06.jpg'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/lil12.jpg'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/12.jpg'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/lil5.JPG'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/16.jpg'),
           new Tindercardsjs.card(7, '', '', 'gfx/pics/07.jpg'),
           new Tindercardsjs.card(8, '', '', 'gfx/pics/08.jpg'),
-          new Tindercardsjs.card(9, '', '', 'gfx/pics/09.jpg'),
           new Tindercardsjs.card(10, '', '', 'gfx/pics/FullSizeRender.jpg'),
            new Tindercardsjs.card(11, '', '', 'gfx/pics/IMG_0257.JPG'),
-          new Tindercardsjs.card(12, '', '', 'gfx/pics/IMG_2110.JPG'),
-         new Tindercardsjs.card(13, '', '', 'gfx/pics/IMG_2295.JPG'),
+          new Tindercardsjs.card(12, '', '', 'gfx/pics/lil6.JPG'),
+       new Tindercardsjs.card(12, '', '', 'gfx/pics/17.jpg'),
           new Tindercardsjs.card(14, '', '', 'gfx/pics/IMG_3259.JPG'),
+           new Tindercardsjs.card(13, '', '', 'gfx/pics/IMG_2295.JPG'),
+            new Tindercardsjs.card(12, '', '', 'gfx/pics/IMG_2110.JPG'),
           new Tindercardsjs.card(15, '', '', 'gfx/pics/IMG_3260.JPG'),
+           new Tindercardsjs.card(9, '', '', 'gfx/pics/lil7.jpg'),
+           new Tindercardsjs.card(9, '', '', 'gfx/pics/18.PNG'),
           new Tindercardsjs.card(16, '', '', 'gfx/pics/IMG_3261.JPG'),
+           new Tindercardsjs.card(9, '', '', 'gfx/pics/11.jpg'),
+           new Tindercardsjs.card(9, '', '', 'gfx/pics/lil3.PNG'),
           new Tindercardsjs.card(17, '', '', 'gfx/pics/IMG_3262.JPG'),
           new Tindercardsjs.card(18, '', '', 'gfx/pics/IMG_3368.JPG'),
           new Tindercardsjs.card(19, '', '', 'gfx/pics/IMG_4252.JPG'),
+           new Tindercardsjs.card(9, '', '', 'gfx/pics/10.jpg'),
+           new Tindercardsjs.card(9, '', '', 'gfx/pics/29.jpg'),
+           new Tindercardsjs.card(9, '', '', 'gfx/pics/09.jpg'),
            new Tindercardsjs.card(20, '', '', 'gfx/pics/IMG_4254.JPG'),
-          new Tindercardsjs.card(21, '', '', 'gfx/pics/IMG_4860.JPG'),
-          new Tindercardsjs.card(22, '', '', 'gfx/pics/IMG_4923.png'),
+          new Tindercardsjs.card(21, '', '', 'gfx/pics/IMG_4860.JPG')
+          new Tindercardsjs.card(22, '', '', 'gfx/pics/lil2.JPG'),
           new Tindercardsjs.card(23, '', '', 'gfx/pics/page3.JPG'),
           new Tindercardsjs.card(25, '', '', 'gfx/pics/IMG_7691.JPG'),
            new Tindercardsjs.card(26, '', '', 'gfx/pics/lil1.JPG'),
