--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       
       body{
         font-family: 'Helvetica-Neue', 'HelveticaNeue', arial, sans-serif;
-        color: #434343;
-        background-color:#d0d0d0;
+        color: #000000;
+        background-color:#000000;
       }
 
       .buttons {
