--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         });
       });
     </script>
+      <div class="buttons"><div class="button d"><img src="gfx/dislike.png" /></div><div class="button l"><img src="gfx/like.png" /></div></div>
     <a href="https://ldrabkin.github.io/tindercardsjs/"><div class="reload"><p>Click here for more cards</p></div></a>
     <!-- <div class="buttons"><div class="button d"><img src="gfx/dislike.png" /></div><div class="button l"><img src="gfx/like.png" /></div></div> -->
   </body>
