--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           new Tindercardsjs.card(19, '', '', 'gfx/pics/met.JPG'),
           new Tindercardsjs.card(20, '', '', 'gfx/pics/lil4.JPG'),
           new Tindercardsjs.card(21, '', '', 'gfx/pics/19.jpg'),
-          new Tindercardsjs.card(23, '', '', 'gfx/pics/04.jpg')
+          new Tindercardsjs.card(23, '', '', 'gfx/pics/04.jpg'),
           new Tindercardsjs.card(24, '', '', 'gfx/pics/30.jpg'),
           new Tindercardsjs.card(25, '', '', 'gfx/pics/13.jpg'),
          new Tindercardsjs.card(26, '', '', 'gfx/pics/26.jpg'),
@@ -151,7 +151,7 @@
            new Tindercardsjs.card(57, '', '', 'gfx/pics/29.jpg'),
            new Tindercardsjs.card(58, '', '', 'gfx/pics/09.jpg'),
            new Tindercardsjs.card(59, '', '', 'gfx/pics/IMG_4254.JPG'),
-          new Tindercardsjs.card(60, '', '', 'gfx/pics/IMG_4860.JPG')
+          new Tindercardsjs.card(60, '', '', 'gfx/pics/IMG_4860.JPG'),
           new Tindercardsjs.card(61, '', '', 'gfx/pics/lil2.JPG'),
           new Tindercardsjs.card(62, '', '', 'gfx/pics/page3.JPG'),
           new Tindercardsjs.card(63, '', '', 'gfx/pics/IMG_7691.JPG'),
