--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
            new Tindercardsjs.card(45, '', '', 'gfx/pics/IMG_2295.JPG'),
             new Tindercardsjs.card(46, '', '', 'gfx/pics/IMG_2110.JPG'),
           new Tindercardsjs.card(47, '', '', 'gfx/pics/IMG_3260.JPG'),
-           new Tindercardsjs.card(48, '', '', 'gfx/pics/lil7.jpg'),
-           new Tindercardsjs.card(49, '', '', 'gfx/pics/18.PNG'),
+           new Tindercardsjs.card(48, '', '', 'gfx/pics/lil7.JPG'),
+           new Tindercardsjs.card(49, '', '', 'gfx/pics/18.jpg'),
           new Tindercardsjs.card(50, '', '', 'gfx/pics/IMG_3261.JPG'),
            new Tindercardsjs.card(51, '', '', 'gfx/pics/11.jpg'),
            new Tindercardsjs.card(52, '', '', 'gfx/pics/lil3.PNG'),
